--- a/SpamClassifier.ipynb
+++ b/SpamClassifier.ipynb
@@ -123,8 +123,8 @@
     }
    ],
    "source": [
-    "cols = pd.read_csv('/Users/pree/Desktop/SPAM classifier/spam.csv',encoding=\"ISO-8859-1\", nrows=1).columns\n",
-    "df = pd.read_csv('/Users/pree/Desktop/SPAM classifier/spam.csv', usecols=cols,encoding=\"ISO-8859-1\" )\n",
+    "cols = pd.read_csv('/Users/pree/Desktop/SPAM_classifier/spam.csv',encoding=\"ISO-8859-1\", nrows=1).columns\n",
+    "df = pd.read_csv('/Users/pree/Desktop/SPAM_classifier/spam.csv', usecols=cols,encoding=\"ISO-8859-1\" )\n",
     "df.head()\n"
    ]
   },
@@ -591,7 +591,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Checking"
+    "againChecking"
    ]
   }
  ],
