--- a/SpamClassifier.ipynb
+++ b/SpamClassifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,13 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import re\n",
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
-    "from nltk import word_tokenize\n",
+    "from nltk.stem.porter import PorterStemmer\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
@@ -24,8 +28,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "STEP 1: ANALYZING DATA"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +129,7 @@
        "4        NaN        NaN  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +237,7 @@
        "4   ham  Nah I don't think he goes to usf, he lives aro..."
       ]
      },
-     "execution_count": 4,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +288,7 @@
        "Text(0, 0.5, 'Counts')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -321,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +412,7 @@
        "num_sentences   5572.0   1.970747   1.417778  1.0   1.0   1.0    2.0   28.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +557,7 @@
        "num_sentences   5548.0   1.940339   1.293384  1.0   1.0   1.0    2.0   11.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +603,149 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "againChecking"
+    "STEP 2: CLEANING DATA"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we are analyzing text we will be using Natural Language Processing(NLP) methodologies to do so.  We will clean the sms text in 2 steps:\n",
+    "\n",
+    "    1. Remove all stopwords in English and also numbers and special characters and then  extract only alphabetical characters from the text\n",
+    "\n",
+    "    2. We will then convert the sms text to lower case\n",
+    "\n",
+    "We will then further preprocess the text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sms</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Go until jurong point, crazy.. Available only ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Ok lar... Joking wif u oni...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Free entry in 2 a wkly comp to win FA Cup fina...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>U dun say so early hor... U c already then say...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Nah I don't think he goes to usf, he lives aro...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 sms\n",
+       "0  Go until jurong point, crazy.. Available only ...\n",
+       "1                      Ok lar... Joking wif u oni...\n",
+       "2  Free entry in 2 a wkly comp to win FA Cup fina...\n",
+       "3  U dun say so early hor... U c already then say...\n",
+       "4  Nah I don't think he goes to usf, he lives aro..."
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Let's take a look at our text\n",
+    "df[['sms']].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The First 5 SMS Texts:\u001b[0m\n",
+      "Go until jurong point, crazy.. Available only in bugis n great world la e buffet... Cine there got amore wat...\n",
+      "Ok lar... Joking wif u oni...\n",
+      "Free entry in 2 a wkly comp to win FA Cup final tkts 21st May 2005. Text FA to 87121 to receive entry question(std txt rate)T&C's apply 08452810075over18's\n",
+      "U dun say so early hor... U c already then say...\n",
+      "Nah I don't think he goes to usf, he lives around here though\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Lets have a look at a sample of texts before cleaning\n",
+    "print(\"The First 5 SMS Texts before cleaning:\\033[0m\",*df[\"sms\"][:5], sep = \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The First 5 Texts after cleaning:\u001b[0m\n",
+      "go until jurong point crazy available only in bugis n great world la e buffet cine there got amore wat\n",
+      "ok lar joking wif u oni\n",
+      "free entry in a wkly comp to win fa cup final tkts st may text fa to to receive entry question std txt rate t c s apply over s\n",
+      "u dun say so early hor u c already then say\n",
+      "nah i don t think he goes to usf he lives around here though\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Defining a function to clean up the text\n",
+    "def Clean(text):\n",
+    "    sms = re.sub('[^a-zA-Z]', ' ', text) #Replacing all non-alphabetic characters with a space\n",
+    "    sms = sms.lower() #converting to lowecase\n",
+    "    sms = sms.split()\n",
+    "    sms = ' '.join(sms)\n",
+    "    return sms\n",
+    "\n",
+    "df[\"clean_sms\"] = df[\"sms\"].apply(Clean)\n",
+    "#Lets have a look at a sample of texts after cleaning\n",
+    "print(\"The First 5 Texts after cleaning:\\033[0m\",*df[\"clean_sms\"][:5], sep = \"\\n\")"
    ]
   }
  ],
