--- a/SpamClassifier.ipynb
+++ b/SpamClassifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,8 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn.metrics import classification_report\n",
+    "from sklearn.metrics import classification_report \n",
+    "import lazypredict\n",
     "\n"
    ]
   },
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +130,7 @@
        "4        NaN        NaN  "
       ]
      },
-     "execution_count": 130,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +238,7 @@
        "4   ham  Nah I don't think he goes to usf, he lives aro..."
       ]
      },
-     "execution_count": 132,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +289,7 @@
        "Text(0, 0.5, 'Counts')"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -333,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +413,7 @@
        "num_sentences   5572.0   1.970747   1.417778  1.0   1.0   1.0    2.0   28.0"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +558,7 @@
        "num_sentences   5548.0   1.940339   1.293384  1.0   1.0   1.0    2.0   11.0"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +684,7 @@
        "4  Nah I don't think he goes to usf, he lives aro..."
       ]
      },
-     "execution_count": 140,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -886,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -931,6 +932,188 @@
     "\n",
     "It's worth noting that columns in the data are often stacked for the purpose of explanation."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The First 5 lines in corpus :\u001b[0m\n",
+      "go jurong point crazy available bugis n great world la e buffet cine got amore wat\n",
+      "ok lar joking wif u oni\n",
+      "free entry wkly comp win fa cup final tkts st may text fa receive entry question std txt rate c apply\n",
+      "u dun say early hor u c already say\n",
+      "nah think go usf life around though\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Creating a corpus of text feature to encode further into vectorized form\n",
+    "corpus= []\n",
+    "for i in df[\"lemmatized_sms\"]:\n",
+    "    sms = ' '.join([row for row in i])\n",
+    "    corpus.append(sms)\n",
+    "    \n",
+    "corpus[:5]\n",
+    "print(\"The First 5 lines in corpus :\\033[0m\",*corpus[:5], sep = \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float64')"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Changing text data in to numbers. \n",
+    "tfidf = TfidfVectorizer()\n",
+    "X = tfidf.fit_transform(corpus).toarray()\n",
+    "#Let's have a look at our feature \n",
+    "X.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Label encode the Target and use it as y\n",
+    "label_encoder = LabelEncoder()\n",
+    "df[\"label\"] = label_encoder.fit_transform(df[\"label\"])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "STEP 8 : MODEL BUILDING"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "MODEL BUILDING\n",
+    "\n",
+    "Steps involved in the Model Building\n",
+    "\n",
+    "Setting up features and target as X and y\n",
+    "Splitting the testing and training sets\n",
+    "Build a pipeline of model for different classifiers.\n",
+    "\n",
+    "Fit all the models on training data\n",
+    "Get the cross-validation on the training set for all the models for accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Setting values for labels and feature as y and X(we already did X in vectorizing...)\n",
+    "y = df[\"label\"] \n",
+    "# Splitting the testing and training sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Testing on the following classifiers\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "\n",
+    "classifiers = [MultinomialNB(), \n",
+    "               RandomForestClassifier(),\n",
+    "               KNeighborsClassifier(), \n",
+    "               SVC()]\n",
+    "for cls in classifiers:\n",
+    "    cls.fit(X_train, y_train)\n",
+    "\n",
+    "# Dictionary of pipelines and model types for ease of reference\n",
+    "pipe_dict = {0: \"NaiveBayes\", 1: \"RandomForest\", 2: \"KNeighbours\",3: \"SVC\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NaiveBayes: 0.968001 \n",
+      "RandomForest: 0.976566 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/pree/opt/miniconda3/envs/ds_env/lib/python3.10/site-packages/sklearn/neighbors/_classification.py:228: FutureWarning: Unlike other reduction functions (e.g. `skew`, `kurtosis`), the default behavior of `mode` typically preserves the axis it acts along. In SciPy 1.11.0, this behavior will change: the default value of `keepdims` will become False, the `axis` over which the statistic is taken will be eliminated, and the value None will no longer be accepted. Set `keepdims` to True or False to avoid this warning.\n",
+      "  mode, _ = stats.mode(_y[neigh_ind, k], axis=1)\n",
+      "/Users/pree/opt/miniconda3/envs/ds_env/lib/python3.10/site-packages/sklearn/neighbors/_classification.py:228: FutureWarning: Unlike other reduction functions (e.g. `skew`, `kurtosis`), the default behavior of `mode` typically preserves the axis it acts along. In SciPy 1.11.0, this behavior will change: the default value of `keepdims` will become False, the `axis` over which the statistic is taken will be eliminated, and the value None will no longer be accepted. Set `keepdims` to True or False to avoid this warning.\n",
+      "  mode, _ = stats.mode(_y[neigh_ind, k], axis=1)\n",
+      "/Users/pree/opt/miniconda3/envs/ds_env/lib/python3.10/site-packages/sklearn/neighbors/_classification.py:228: FutureWarning: Unlike other reduction functions (e.g. `skew`, `kurtosis`), the default behavior of `mode` typically preserves the axis it acts along. In SciPy 1.11.0, this behavior will change: the default value of `keepdims` will become False, the `axis` over which the statistic is taken will be eliminated, and the value None will no longer be accepted. Set `keepdims` to True or False to avoid this warning.\n",
+      "  mode, _ = stats.mode(_y[neigh_ind, k], axis=1)\n",
+      "/Users/pree/opt/miniconda3/envs/ds_env/lib/python3.10/site-packages/sklearn/neighbors/_classification.py:228: FutureWarning: Unlike other reduction functions (e.g. `skew`, `kurtosis`), the default behavior of `mode` typically preserves the axis it acts along. In SciPy 1.11.0, this behavior will change: the default value of `keepdims` will become False, the `axis` over which the statistic is taken will be eliminated, and the value None will no longer be accepted. Set `keepdims` to True or False to avoid this warning.\n",
+      "  mode, _ = stats.mode(_y[neigh_ind, k], axis=1)\n",
+      "/Users/pree/opt/miniconda3/envs/ds_env/lib/python3.10/site-packages/sklearn/neighbors/_classification.py:228: FutureWarning: Unlike other reduction functions (e.g. `skew`, `kurtosis`), the default behavior of `mode` typically preserves the axis it acts along. In SciPy 1.11.0, this behavior will change: the default value of `keepdims` will become False, the `axis` over which the statistic is taken will be eliminated, and the value None will no longer be accepted. Set `keepdims` to True or False to avoid this warning.\n",
+      "  mode, _ = stats.mode(_y[neigh_ind, k], axis=1)\n",
+      "/Users/pree/opt/miniconda3/envs/ds_env/lib/python3.10/site-packages/sklearn/neighbors/_classification.py:228: FutureWarning: Unlike other reduction functions (e.g. `skew`, `kurtosis`), the default behavior of `mode` typically preserves the axis it acts along. In SciPy 1.11.0, this behavior will change: the default value of `keepdims` will become False, the `axis` over which the statistic is taken will be eliminated, and the value None will no longer be accepted. Set `keepdims` to True or False to avoid this warning.\n",
+      "  mode, _ = stats.mode(_y[neigh_ind, k], axis=1)\n",
+      "/Users/pree/opt/miniconda3/envs/ds_env/lib/python3.10/site-packages/sklearn/neighbors/_classification.py:228: FutureWarning: Unlike other reduction functions (e.g. `skew`, `kurtosis`), the default behavior of `mode` typically preserves the axis it acts along. In SciPy 1.11.0, this behavior will change: the default value of `keepdims` will become False, the `axis` over which the statistic is taken will be eliminated, and the value None will no longer be accepted. Set `keepdims` to True or False to avoid this warning.\n",
+      "  mode, _ = stats.mode(_y[neigh_ind, k], axis=1)\n",
+      "/Users/pree/opt/miniconda3/envs/ds_env/lib/python3.10/site-packages/sklearn/neighbors/_classification.py:228: FutureWarning: Unlike other reduction functions (e.g. `skew`, `kurtosis`), the default behavior of `mode` typically preserves the axis it acts along. In SciPy 1.11.0, this behavior will change: the default value of `keepdims` will become False, the `axis` over which the statistic is taken will be eliminated, and the value None will no longer be accepted. Set `keepdims` to True or False to avoid this warning.\n",
+      "  mode, _ = stats.mode(_y[neigh_ind, k], axis=1)\n",
+      "/Users/pree/opt/miniconda3/envs/ds_env/lib/python3.10/site-packages/sklearn/neighbors/_classification.py:228: FutureWarning: Unlike other reduction functions (e.g. `skew`, `kurtosis`), the default behavior of `mode` typically preserves the axis it acts along. In SciPy 1.11.0, this behavior will change: the default value of `keepdims` will become False, the `axis` over which the statistic is taken will be eliminated, and the value None will no longer be accepted. Set `keepdims` to True or False to avoid this warning.\n",
+      "  mode, _ = stats.mode(_y[neigh_ind, k], axis=1)\n",
+      "/Users/pree/opt/miniconda3/envs/ds_env/lib/python3.10/site-packages/sklearn/neighbors/_classification.py:228: FutureWarning: Unlike other reduction functions (e.g. `skew`, `kurtosis`), the default behavior of `mode` typically preserves the axis it acts along. In SciPy 1.11.0, this behavior will change: the default value of `keepdims` will become False, the `axis` over which the statistic is taken will be eliminated, and the value None will no longer be accepted. Set `keepdims` to True or False to avoid this warning.\n",
+      "  mode, _ = stats.mode(_y[neigh_ind, k], axis=1)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KNeighbours: 0.910775 \n",
+      "SVC: 0.975214 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cossvalidation \n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "\n",
+    "for i, model in enumerate(classifiers):\n",
+    "    cv_score = cross_val_score(model, X_train,y_train,scoring=\"accuracy\", cv=10)\n",
+    "    print(\"%s: %f \" % (pipe_dict[i], cv_score.mean()))"
+   ]
   }
  ],
  "metadata": {
@@ -949,7 +1132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
