--- a/SpamClassifier.ipynb
+++ b/SpamClassifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,11 +20,17 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "\n",
+    "\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.pipeline import Pipeline\n",
     "from sklearn.metrics import classification_report \n",
-    "import lazypredict\n",
+    "\n",
     "\n"
    ]
   },
@@ -38,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +136,7 @@
        "4        NaN        NaN  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +244,7 @@
        "4   ham  Nah I don't think he goes to usf, he lives aro..."
       ]
      },
-     "execution_count": 6,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +295,7 @@
        "Text(0, 0.5, 'Counts')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -334,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +419,7 @@
        "num_sentences   5572.0   1.970747   1.417778  1.0   1.0   1.0    2.0   28.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +564,7 @@
        "num_sentences   5548.0   1.940339   1.293384  1.0   1.0   1.0    2.0   11.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +690,7 @@
        "4  Nah I don't think he goes to usf, he lives aro..."
       ]
      },
-     "execution_count": 14,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -887,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -926,23 +932,23 @@
     "\n",
     "To vectorize preprocessed data, the following steps can be followed:\n",
     "\n",
-    "Create a corpus of lemmatized text\n",
-    "Convert the corpus into vector form\n",
-    "Label encode the classes in the target\n",
+    "    Create a corpus of lemmatized text\n",
+    "    Convert the corpus into vector form\n",
+    "    Label encode the classes in the target\n",
     "\n",
     "It's worth noting that columns in the data are often stacked for the purpose of explanation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The First 5 lines in corpus :\u001b[0m\n",
+      "The First 5 lines of the corpus:\u001b[0m\n",
       "go jurong point crazy available bugis n great world la e buffet cine got amore wat\n",
       "ok lar joking wif u oni\n",
       "free entry wkly comp win fa cup final tkts st may text fa receive entry question std txt rate c apply\n",
@@ -952,49 +958,41 @@
     }
    ],
    "source": [
-    "#Creating a corpus of text feature to encode further into vectorized form\n",
-    "corpus= []\n",
-    "for i in df[\"lemmatized_sms\"]:\n",
+    "# create a corpus from the 'lemmatized_sms' column\n",
+    "corpus = []\n",
+    "\n",
+    "for i in df['lemmatized_sms']:\n",
     "    sms = ' '.join([row for row in i])\n",
     "    corpus.append(sms)\n",
     "    \n",
     "corpus[:5]\n",
-    "print(\"The First 5 lines in corpus :\\033[0m\",*corpus[:5], sep = \"\\n\")"
+    "print(\"The First 5 lines of the corpus:\\033[0m\",*corpus[:5], sep = \"\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dtype('float64')"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Changing text data in to numbers. \n",
-    "tfidf = TfidfVectorizer()\n",
-    "X = tfidf.fit_transform(corpus).toarray()\n",
-    "#Let's have a look at our feature \n",
-    "X.dtype"
+    "#Changing text data in to numbers\n",
+    "\n",
+    "# create a TfidfVectorizer object\n",
+    "vectorizer = TfidfVectorizer()\n",
+    "\n",
+    "# fit the vectorizer to the corpus and transform the corpus into a matrix called X(as we will have the corpus as the X coloumn and y as the target(label) column\n",
+    "X = vectorizer.fit_transform(corpus).toarray()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Label encode the Target and use it as y\n",
     "label_encoder = LabelEncoder()\n",
-    "df[\"label\"] = label_encoder.fit_transform(df[\"label\"])"
+    "df['label'] = label_encoder.fit_transform(df['label'])"
    ]
   },
   {
@@ -1014,106 +1012,69 @@
     "\n",
     "Steps involved in the Model Building\n",
     "\n",
-    "Setting up features and target as X and y\n",
-    "Splitting the testing and training sets\n",
-    "Build a pipeline of model for different classifiers.\n",
-    "\n",
-    "Fit all the models on training data\n",
-    "Get the cross-validation on the training set for all the models for accuracy"
+    "    Setting up features and target as X and y\n",
+    "    Splitting the testing and training sets\n",
+    "    Build a pipeline of model for four different classifiers.\n",
+    "    \n",
+    "        Naïve Bayes\n",
+    "        RandomForestClassifier\n",
+    "        KNeighborsClassifier\n",
+    "        Support Vector Machines\n",
+    "    \n",
+    "    Fit all the models on training data\n",
+    "    Get the cross-validation on the training set for all the models for accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Setting values for labels and feature as y and X(we already did X in vectorizing...)\n",
-    "y = df[\"label\"] \n",
-    "# Splitting the testing and training sets\n",
+    "# split the data into training and testing sets\n",
+    "y = df['label']\n",
+    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Testing on the following classifiers\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.svm import SVC\n",
-    "\n",
-    "\n",
-    "classifiers = [MultinomialNB(), \n",
-    "               RandomForestClassifier(),\n",
-    "               KNeighborsClassifier(), \n",
-    "               SVC()]\n",
-    "for cls in classifiers:\n",
-    "    cls.fit(X_train, y_train)\n",
-    "\n",
-    "# Dictionary of pipelines and model types for ease of reference\n",
-    "pipe_dict = {0: \"NaiveBayes\", 1: \"RandomForest\", 2: \"KNeighbours\",3: \"SVC\"}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NaiveBayes: 0.968001 \n",
-      "RandomForest: 0.976566 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/pree/opt/miniconda3/envs/ds_env/lib/python3.10/site-packages/sklearn/neighbors/_classification.py:228: FutureWarning: Unlike other reduction functions (e.g. `skew`, `kurtosis`), the default behavior of `mode` typically preserves the axis it acts along. In SciPy 1.11.0, this behavior will change: the default value of `keepdims` will become False, the `axis` over which the statistic is taken will be eliminated, and the value None will no longer be accepted. Set `keepdims` to True or False to avoid this warning.\n",
-      "  mode, _ = stats.mode(_y[neigh_ind, k], axis=1)\n",
-      "/Users/pree/opt/miniconda3/envs/ds_env/lib/python3.10/site-packages/sklearn/neighbors/_classification.py:228: FutureWarning: Unlike other reduction functions (e.g. `skew`, `kurtosis`), the default behavior of `mode` typically preserves the axis it acts along. In SciPy 1.11.0, this behavior will change: the default value of `keepdims` will become False, the `axis` over which the statistic is taken will be eliminated, and the value None will no longer be accepted. Set `keepdims` to True or False to avoid this warning.\n",
-      "  mode, _ = stats.mode(_y[neigh_ind, k], axis=1)\n",
-      "/Users/pree/opt/miniconda3/envs/ds_env/lib/python3.10/site-packages/sklearn/neighbors/_classification.py:228: FutureWarning: Unlike other reduction functions (e.g. `skew`, `kurtosis`), the default behavior of `mode` typically preserves the axis it acts along. In SciPy 1.11.0, this behavior will change: the default value of `keepdims` will become False, the `axis` over which the statistic is taken will be eliminated, and the value None will no longer be accepted. Set `keepdims` to True or False to avoid this warning.\n",
-      "  mode, _ = stats.mode(_y[neigh_ind, k], axis=1)\n",
-      "/Users/pree/opt/miniconda3/envs/ds_env/lib/python3.10/site-packages/sklearn/neighbors/_classification.py:228: FutureWarning: Unlike other reduction functions (e.g. `skew`, `kurtosis`), the default behavior of `mode` typically preserves the axis it acts along. In SciPy 1.11.0, this behavior will change: the default value of `keepdims` will become False, the `axis` over which the statistic is taken will be eliminated, and the value None will no longer be accepted. Set `keepdims` to True or False to avoid this warning.\n",
-      "  mode, _ = stats.mode(_y[neigh_ind, k], axis=1)\n",
-      "/Users/pree/opt/miniconda3/envs/ds_env/lib/python3.10/site-packages/sklearn/neighbors/_classification.py:228: FutureWarning: Unlike other reduction functions (e.g. `skew`, `kurtosis`), the default behavior of `mode` typically preserves the axis it acts along. In SciPy 1.11.0, this behavior will change: the default value of `keepdims` will become False, the `axis` over which the statistic is taken will be eliminated, and the value None will no longer be accepted. Set `keepdims` to True or False to avoid this warning.\n",
-      "  mode, _ = stats.mode(_y[neigh_ind, k], axis=1)\n",
-      "/Users/pree/opt/miniconda3/envs/ds_env/lib/python3.10/site-packages/sklearn/neighbors/_classification.py:228: FutureWarning: Unlike other reduction functions (e.g. `skew`, `kurtosis`), the default behavior of `mode` typically preserves the axis it acts along. In SciPy 1.11.0, this behavior will change: the default value of `keepdims` will become False, the `axis` over which the statistic is taken will be eliminated, and the value None will no longer be accepted. Set `keepdims` to True or False to avoid this warning.\n",
-      "  mode, _ = stats.mode(_y[neigh_ind, k], axis=1)\n",
-      "/Users/pree/opt/miniconda3/envs/ds_env/lib/python3.10/site-packages/sklearn/neighbors/_classification.py:228: FutureWarning: Unlike other reduction functions (e.g. `skew`, `kurtosis`), the default behavior of `mode` typically preserves the axis it acts along. In SciPy 1.11.0, this behavior will change: the default value of `keepdims` will become False, the `axis` over which the statistic is taken will be eliminated, and the value None will no longer be accepted. Set `keepdims` to True or False to avoid this warning.\n",
-      "  mode, _ = stats.mode(_y[neigh_ind, k], axis=1)\n",
-      "/Users/pree/opt/miniconda3/envs/ds_env/lib/python3.10/site-packages/sklearn/neighbors/_classification.py:228: FutureWarning: Unlike other reduction functions (e.g. `skew`, `kurtosis`), the default behavior of `mode` typically preserves the axis it acts along. In SciPy 1.11.0, this behavior will change: the default value of `keepdims` will become False, the `axis` over which the statistic is taken will be eliminated, and the value None will no longer be accepted. Set `keepdims` to True or False to avoid this warning.\n",
-      "  mode, _ = stats.mode(_y[neigh_ind, k], axis=1)\n",
-      "/Users/pree/opt/miniconda3/envs/ds_env/lib/python3.10/site-packages/sklearn/neighbors/_classification.py:228: FutureWarning: Unlike other reduction functions (e.g. `skew`, `kurtosis`), the default behavior of `mode` typically preserves the axis it acts along. In SciPy 1.11.0, this behavior will change: the default value of `keepdims` will become False, the `axis` over which the statistic is taken will be eliminated, and the value None will no longer be accepted. Set `keepdims` to True or False to avoid this warning.\n",
-      "  mode, _ = stats.mode(_y[neigh_ind, k], axis=1)\n",
-      "/Users/pree/opt/miniconda3/envs/ds_env/lib/python3.10/site-packages/sklearn/neighbors/_classification.py:228: FutureWarning: Unlike other reduction functions (e.g. `skew`, `kurtosis`), the default behavior of `mode` typically preserves the axis it acts along. In SciPy 1.11.0, this behavior will change: the default value of `keepdims` will become False, the `axis` over which the statistic is taken will be eliminated, and the value None will no longer be accepted. Set `keepdims` to True or False to avoid this warning.\n",
-      "  mode, _ = stats.mode(_y[neigh_ind, k], axis=1)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "KNeighbours: 0.910775 \n",
-      "SVC: 0.975214 \n"
+      "LogisticRegression 0.9657657657657658\n",
+      "DecisionTreeClassifier 0.9657657657657658\n",
+      "RandomForestClassifier 0.9774774774774775\n",
+      "SVC 0.9783783783783784\n",
+      "GaussianNB 0.8666666666666667\n"
      ]
     }
    ],
    "source": [
-    "# Cossvalidation \n",
-    "from sklearn.model_selection import cross_val_score\n",
+    "# create a list of classifiers\n",
+    "classifiers = [LogisticRegression(), DecisionTreeClassifier(), RandomForestClassifier(), SVC(), GaussianNB()]\n",
     "\n",
+    "# iterate through the list of classifiers\n",
+    "for clf in classifiers:\n",
+    "    # fit the classifier to the training data\n",
+    "    clf.fit(X_train, y_train)\n",
     "\n",
-    "for i, model in enumerate(classifiers):\n",
-    "    cv_score = cross_val_score(model, X_train,y_train,scoring=\"accuracy\", cv=10)\n",
-    "    print(\"%s: %f \" % (pipe_dict[i], cv_score.mean()))"
+    "    # make predictions on the test data\n",
+    "    y_pred = clf.predict(X_test)\n",
+    "\n",
+    "    # evaluate the accuracy of the classifier\n",
+    "    accuracy = clf.score(X_test, y_test)\n",
+    "    print(type(clf).__name__, accuracy)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
