Feb 27 2nd commit

--- a/SpamClassifier.ipynb
+++ b/SpamClassifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.naive_bayes import GaussianNB\n",
     "\n",
-    "\n",
+    "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.metrics import classification_report \n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        "4        NaN        NaN  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "4   ham  Nah I don't think he goes to usf, he lives aro..."
       ]
      },
-     "execution_count": 68,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
        "Text(0, 0.5, 'Counts')"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
        "num_sentences   5572.0   1.970747   1.417778  1.0   1.0   1.0    2.0   28.0"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
        "num_sentences   5548.0   1.940339   1.293384  1.0   1.0   1.0    2.0   11.0"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
        "4  Nah I don't think he goes to usf, he lives aro..."
       ]
      },
-     "execution_count": 76,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1027,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,18 +1039,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LogisticRegression 0.9657657657657658\n",
-      "DecisionTreeClassifier 0.9657657657657658\n",
-      "RandomForestClassifier 0.9774774774774775\n",
-      "SVC 0.9783783783783784\n",
-      "GaussianNB 0.8666666666666667\n"
+      "LogisticRegression 0.9632305590789345 +/- 0.004350205121977794\n",
+      "DecisionTreeClassifier 0.9662952483169089 +/- 0.0059215571360637966\n",
+      "RandomForestClassifier 0.9785501024490193 +/- 0.0062173695422507325\n",
+      "SVC 0.9769291312973623 +/- 0.005569248509990719\n",
+      "GaussianNB 0.8759953816632517 +/- 0.013053627298206406\n"
      ]
     }
    ],
@@ -1060,21 +1060,11 @@
     "\n",
     "# iterate through the list of classifiers\n",
     "for clf in classifiers:\n",
-    "    # fit the classifier to the training data\n",
-    "    clf.fit(X_train, y_train)\n",
-    "\n",
-    "    # make predictions on the test data\n",
-    "    y_pred = clf.predict(X_test)\n",
-    "\n",
-    "    # evaluate the accuracy of the classifier\n",
-    "    accuracy = clf.score(X_test, y_test)\n",
-    "    print(type(clf).__name__, accuracy)"
+    "    # perform 10-fold cross-validation\n",
+    "    scores = cross_val_score(clf, X, y, cv=10)\n",
+    "    # print the mean and standard deviation of the cross-validation scores\n",
+    "    print(type(clf).__name__, scores.mean(), \"+/-\", scores.std())"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
