finetuned_EOD_27Feb

--- a/SpamClassifier.ipynb
+++ b/SpamClassifier.ipynb
@@ -1138,7 +1138,7 @@
     }
    ],
    "source": [
-    "\n",
+    "#color palette\n",
     "colors= ['#EA1A7F','#FEC603','#A8F387','#16D6FA']\n",
     "\n",
     "# Create custom colormap using hex codes\n",
@@ -1232,6 +1232,8 @@
     }
    ],
    "source": [
+    "#color palette\n",
+    "color = ['#AF87CE','#EA1A7F','#FEC603','#A8F387','#16D6FA']\n",
     "\n",
     "# Calculate classification report for each classifier\n",
     "for clf in classifiers:\n",
@@ -1251,7 +1253,7 @@
     "    testset_accuracy = clf.score(X_test, y_test)\n",
     "    \n",
     "    # Create bar chart for each classifier\n",
-    "    plt.bar([0, 1, 2, 3, 4], [precision, recall, f1_score, trainset_accuracy, testset_accuracy], color=['#AF87CE','#EA1A7F','#FEC603','#A8F387','#16D6FA'])\n",
+    "    plt.bar([0, 1, 2, 3, 4], [precision, recall, f1_score, trainset_accuracy, testset_accuracy], color=color)\n",
     "    plt.xticks([0, 1, 2, 3, 4], ['Precision', 'Recall', 'F1-score', 'Train Accuracy', 'Test Accuracy'])\n",
     "    plt.title(type(clf).__name__)\n",
     "    plt.show()"
